--- a/src/index.html
+++ b/src/index.html
@@ -22,23 +22,23 @@
       <div class="how-info">
         <h2>How to play</h2>
         <ol>
-          <li>Pick phase: select your <b>4</b> bots on the grid.</li>
+          <li>Pick phase: select your <b>4</b> ships on the grid.</li>
           <li>
-            Play phase: When your turn come, you can <b>activate</b> a bot
+            Play phase: When your turn come, you can <b>activate</b> a ship
             <ul>
-              <li>He moves in the active direction by <b>4</b> cells</li>
-              <li>He shots the nearest opponent damaging him by <b>distance between them * 3</b></li>
-              <li>If the opponent is hit from <b>back</b> the damage is <b>triplied</b></li>
+              <li>It moves in the active direction by <b>4</b> cells</li>
+              <li>It shots the nearest opponent damaging him by <b>distance between them * 3</b></li>
+              <li>If the opponent is hit on the <b>back</b> the damage is <b>triplied</b></li>
             </ul>
           </li>
-          <li>Kill all the enemies to win</li>
+          <li>Kill all the enemy ships to win</li>
         </ol>
       </div>
     </div>
     <div class="connecting">Connecting</div>
     <div class="wait">
       <span>Waiting for another player</span>
-      <small>invite a friend to play on <a></a></small>
+      <small>or invite a friend to play sharing this link <a></a></small>
     </div>
     <div class="won">
       <span>You won!</span>
@@ -77,10 +77,10 @@
     <header></header>
     <footer>
       <div class="picking">
-        <span class="pick-chars">Pick 4 bots</span>
+        <span class="pick-chars">Pick 4 ships</span>
         <span class="wait-opp">Wait for your opponent</span>
       </div>
-      <div class="me">Activate a bot</div>
+      <div class="me">Activate a ship</div>
       <div class="opp">Wait for opponent move</div>
     </footer>
   </body>
