--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             <ul>
               <li>It moves in the active direction by <b>4</b> cells</li>
               <li>It shots the nearest opponent damaging him by <b>distance between them * 3</b></li>
-              <li>If the opponent is hit on the <b>back</b> the damage is <b>triplied</b></li>
+              <li>If the opponent is hit on the <b>back</b> the damage is <b>tripled</b></li>
             </ul>
           </li>
           <li>Kill all the enemy ships to win</li>
