--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,8 @@
     <div class="connecting">Connecting</div>
     <div class="wait">
       <span>Waiting for another player</span>
-      <small>or invite a friend to play sharing this link <a></a></small>
+      <small>invite a friend to play sharing this link <a></a></small>
+      <a href="#" class="bot">or play vs a bot</a>
     </div>
     <div class="won">
       <span>You won!</span>
