--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div class="splash">
       <h1>Backshot Tactics</h1>
       <form class="start">
-        <input required maxlength="15" type="text" name="user" placeholder="Username" aria-label="Username"/>
+        <input required maxlength="15" minlength="3" type="text" name="user" placeholder="Username" aria-label="Username"/>
         <button type="submit">Play</button>
       </form>
       <a class="ranking" href="#">Ranking</a>
